syntax = "proto3";
package goshare;
option go_package = "github.com/mineralres/goshare/pkg/pb/goshare";

enum PeriodType {
  // Tick
  TICK = 0;
  // 分钟
  M1 = 1;
  // 3分钟
  M3 = 2;
  // 5分钟
  M5 = 3;
  // 10分钟
  M10 = 4;
  // 15分钟
  M15 = 5;
  // 30分钟
  M30 = 6;
  // 小时
  H1 = 7;
  // 3小时
  H3 = 8;
  // 日线
  D1 = 9;
  // 周线
  W1 = 10;
  // 月线
  MON1 = 11;
}

// OptionCallPutType 期权call or put 类型
enum OptionCallPutType {
  OCPT_CALL = 0;
  OCPT_PUT  = 1;
}

// 行权日类型
enum OptionDeliveryDateType { ODDT_EUR = 0; }

// 平仓手续费算法
enum CloseCommissionAlgorithim {
  // 普通
  CCA_NORMAL = 0;
  // 收一次
  CCA_ONCE = 1;
  // 隔夜日期
  CCA_MULTIPLE_BY_DATE = 2;
}

// 经纪商通道
message BrokerRoute {
  string   id                      = 1;
  int32    type                    = 2;
  string   name                    = 3;
  repeated string md_front_list    = 4;
  repeated string trade_front_list = 5;
}

message BrokerRouteList { repeated BrokerRoute list = 1; }

message ReqUpdateTIOpenDate {
  string exchange  = 1;
  string symbol    = 2;
  int32  open_date = 3;
}

message ReqUpdateTIOpenDateList {
  int32    exchange                    = 1;
  repeated ReqUpdateTIOpenDate list    = 2;
  string                       op_code = 3;
}

enum AccountType {
  CN_FUTURE = 0;
  CN_STOCK  = 1;
}

enum CurrencyType {
  CNY = 0;
  USD = 1;
}

// 结算账户资金信息
message AccountMoneySummary {
  // 账号
  string id = 1;
  // 结算组（可能单个结算组给个摘要)
  AccountType type = 2;
  // 币种
  CurrencyType currency_type = 3;
  /// 余额
  double balance = 4;
  /// 手续费
  double commission = 5;
  /// 占用保证金
  double cur_margin = 6;
  /// 持仓市值.
  double net_position_amount = 7;
  /// 上次余额
  double pre_balance = 8;
  /// 利息收入
  double interest_in = 9;
  /// 存款
  double deposit = 10;
  /// 取款
  double withdraw = 11;
  /// 冻结保证金
  double frozen_margin = 12;
  /// 冻结手续费
  double frozen_commission = 13;
  /// 可用资金
  double available = 14;
  /// 平仓盈亏
  double close_profit = 15;
  /// 持仓盈亏
  double position_profit = 16;
  // 上次质押金额
  double pre_mortgate = 17;
  // 上次信用额度
  double pre_credit = 18;
  // 利息基数
  double interest_base = 19;
  // 可取资金
  double withdraw_available = 20;
  // 基本准备金
  double reserve = 21;
  // 交易日
  int32 trading_day = 22;
  // 信用额度
  double credit = 23;
  // 质押金额
  double mortgate = 24;
  // 交易所保证金
  double exchange_margin = 25;
  // 交割保证金
  double delivery_margin = 26;
  // 交易所交割保证金
  double exchange_delivery_margin = 27;
  // 保底期货结算准备金
  double reserve_balance = 28;
  // 交割手续费
  double delivery_commission = 29;
  // 冻结过户费
  double frozen_transfer_fee = 30;
  // 冻结的印花税
  double frozen_stamp_tax = 31;
  // 过户费
  double transfer_fee = 32;
  // 印花税
  double stamp_tax = 33;
  /// 盯市盈亏
  double mtm_profit = 34;
  ///授信额度
  double pre_mtm_profit = 35;
  ///证券总价值
  double stock_value = 36;
  ///国债回购占用资金
  double bond_repurchase_amount = 37;
  ///国债逆回购占用资金
  double reverse_repurchase_amount = 38;
  ///融资买入金额
  double margin_trade_amount = 39;
  ///融券卖出金额
  double short_sell_amount = 40;
  ///融资持仓盈亏
  double margin_trade_profit = 41;
  ///融券持仓盈亏
  double short_sell_profit = 42;
  // 冻结平仓所需要费用
  double frozen_close_commission = 43;
  // 劣后
  double common_balance = 44;
  // 优先资金
  double prefered_balance = 45;
  // 兑换基础货币汇率
  double base_exchange_rate = 46;
  // 报警
  double warning_level = 47;
  // 强平
  double force_close_level = 48;
  // 进入清算的平仓盈亏
  double cleared_closed_profit = 49;
  // 名称
  string name = 50;
  // 利息
  double interest = 51;
  // 冻结利息
  double frozen_interest = 52;
}

message AccountMoneySummaryList { repeated AccountMoneySummary list = 1; }

// 出入金操作
message MoneyTransferRecord {
  // ID
  int64 uid = 1;
  // 出入
  int32 direction = 2;
  // 币种
  int32 currency_type = 3;
  // 结算组
  int32 settlement_group = 4;
  // 是否确认
  int32 confirmed = 5;
  // 优先
  int32 is_prefered = 6;
  // 金额
  double amount = 7;
  // 账户
  string account_id = 8;
  // 操作员
  string operator_id = 9;
  // 会话编号
  int32 session_id = 10;
  // 请求时间
  int64 time = 11;
  // 备注
  string comment = 12;
  // 第三方单号
  string bank_trade_id = 13;
  // 配置编号，用于出金
  int64 payment_config_id = 14;
  // 原始金额
  double original_amount = 15;
  // 费用
  double fee = 16;
  // 通道
  string payment_path = 17;
  // 身份证号
  string identity_number = 18;
  // 电话
  string phone_number = 19;
  // 银行名称
  string bank_name = 20;
  // 支行名称
  string bank_branch_name = 21;
  // 银行卡号
  string bank_card_no = 22;
  // 省份
  string province = 23;
  // 城市
  string city = 24;
  // 支付方式代码
  string pay_type = 25;
  // 支付时间
  int64 payed_time = 26;
  // 确认时间
  int64 confirmed_time = 27;
  // 名称
  string name = 28;
}

message MTRList { repeated MoneyTransferRecord list = 1; }

// 期权月份
message OptionMonth {
  string name  = 1;
  string value = 2;
  string short = 3;
}

// 期权月份列表
message OptionMonthList { repeated OptionMonth list = 1; }

// 交易账号类型
enum TradingAccountType {
  TAT_NORMAL     = 0;
  TAT_TRAINNING  = 1;
  TAT_CTP_MIRROR = 2;
}

message EmptyRequest {}
message EmptyResponse {}

message CommonRequest {}
message CommonResponse {
  bool   success = 1;
  int32  code    = 2;
  string message = 3;
}